// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component PublicationForm should render component initialised with just one field - publication type 1`] = `
<form
  onSubmit={[Function]}
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
      when={true}
    />
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Work type"
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Work type"
          name="rek_display_type"
          placeholder="Select a Work type from the dropdown list"
          required={true}
        >
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_0"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_1"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_2"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_3"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(Divider)
            key="div_0"
          />
          <WithStyles(MenuItem)
            disabled={false}
            key="0"
            value={263}
          >
            Audio Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="1"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="2"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="3"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="4"
            value={197}
          >
            Conference Proceedings
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="5"
            value={313}
          >
            Creative Work
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="6"
            value={181}
          >
            Department Technical Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="7"
            value={316}
          >
            Design
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="8"
            value={202}
          >
            Generic Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="9"
            value={238}
          >
            Image
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="10"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="11"
            value={191}
          >
            Newspaper Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="12"
            value={185}
          >
            Patent
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="13"
            value={204}
          >
            Preprint
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="14"
            value={275}
          >
            Research Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="15"
            value={189}
          >
            Seminar Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="16"
            value={187}
          >
            Thesis
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="17"
            value={310}
          >
            Video Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="18"
            value={183}
          >
            Working Paper
          </WithStyles(MenuItem)>
        </Field>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="secondary"
        disabled={false}
        fullWidth={true}
        onClick={[MockFunction]}
      >
        Abandon and search again
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`Component PublicationForm should render component with BookForm 1`] = `
<form
  onSubmit={[Function]}
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
      when={true}
    />
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Work type"
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Work type"
          name="rek_display_type"
          placeholder="Select a Work type from the dropdown list"
          required={true}
          value={174}
        >
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_0"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_1"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_2"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_3"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(Divider)
            key="div_0"
          />
          <WithStyles(MenuItem)
            disabled={false}
            key="0"
            value={263}
          >
            Audio Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="1"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="2"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="3"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="4"
            value={197}
          >
            Conference Proceedings
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="5"
            value={313}
          >
            Creative Work
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="6"
            value={181}
          >
            Department Technical Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="7"
            value={316}
          >
            Design
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="8"
            value={202}
          >
            Generic Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="9"
            value={238}
          >
            Image
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="10"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="11"
            value={191}
          >
            Newspaper Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="12"
            value={185}
          >
            Patent
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="13"
            value={204}
          >
            Preprint
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="14"
            value={275}
          >
            Research Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="15"
            value={189}
          >
            Seminar Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="16"
            value={187}
          >
            Thesis
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="17"
            value={310}
          >
            Video Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="18"
            value={183}
          >
            Working Paper
          </WithStyles(MenuItem)>
        </Field>
      </StandardCard>
    </WithStyles(Grid)>
    <React.Fragment>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <BookForm
          formValues={
            Immutable.Map {
              "rek_display_type": 174,
            }
          }
          submitting={false}
          subtypeVocabId={453581}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Upload files"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="files"
            requireOpenAccessStatus={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </StandardCard>
      </WithStyles(Grid)>
    </React.Fragment>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="secondary"
        disabled={false}
        fullWidth={true}
        onClick={[MockFunction]}
      >
        Abandon and search again
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        fullWidth={true}
        onClick={[MockFunction]}
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
        variant="contained"
      >
        Submit for approval
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`Component PublicationForm should render component with GenericDocument 1`] = `
<form
  onSubmit={[Function]}
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
      when={true}
    />
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Work type"
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Work type"
          name="rek_display_type"
          placeholder="Select a Work type from the dropdown list"
          required={true}
          value={202}
        >
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_0"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_1"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_2"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_3"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(Divider)
            key="div_0"
          />
          <WithStyles(MenuItem)
            disabled={false}
            key="0"
            value={263}
          >
            Audio Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="1"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="2"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="3"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="4"
            value={197}
          >
            Conference Proceedings
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="5"
            value={313}
          >
            Creative Work
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="6"
            value={181}
          >
            Department Technical Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="7"
            value={316}
          >
            Design
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="8"
            value={202}
          >
            Generic Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="9"
            value={238}
          >
            Image
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="10"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="11"
            value={191}
          >
            Newspaper Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="12"
            value={185}
          >
            Patent
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="13"
            value={204}
          >
            Preprint
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="14"
            value={275}
          >
            Research Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="15"
            value={189}
          >
            Seminar Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="16"
            value={187}
          >
            Thesis
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="17"
            value={310}
          >
            Video Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="18"
            value={183}
          >
            Working Paper
          </WithStyles(MenuItem)>
        </Field>
      </StandardCard>
    </WithStyles(Grid)>
    <React.Fragment>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <GenericDocumentForm
          formValues={
            Immutable.Map {
              "rek_display_type": 202,
            }
          }
          submitting={false}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Upload files"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="files"
            requireOpenAccessStatus={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </StandardCard>
      </WithStyles(Grid)>
    </React.Fragment>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="secondary"
        disabled={false}
        fullWidth={true}
        onClick={[MockFunction]}
      >
        Abandon and search again
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        fullWidth={true}
        onClick={[MockFunction]}
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
        variant="contained"
      >
        Submit for approval
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`Component PublicationForm should render component with JournalArticleForm 1`] = `
<form
  onSubmit={[Function]}
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
      when={true}
    />
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Work type"
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Work type"
          name="rek_display_type"
          placeholder="Select a Work type from the dropdown list"
          required={true}
          value={179}
        >
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_0"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_1"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_2"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_3"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(Divider)
            key="div_0"
          />
          <WithStyles(MenuItem)
            disabled={false}
            key="0"
            value={263}
          >
            Audio Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="1"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="2"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="3"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="4"
            value={197}
          >
            Conference Proceedings
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="5"
            value={313}
          >
            Creative Work
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="6"
            value={181}
          >
            Department Technical Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="7"
            value={316}
          >
            Design
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="8"
            value={202}
          >
            Generic Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="9"
            value={238}
          >
            Image
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="10"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="11"
            value={191}
          >
            Newspaper Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="12"
            value={185}
          >
            Patent
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="13"
            value={204}
          >
            Preprint
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="14"
            value={275}
          >
            Research Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="15"
            value={189}
          >
            Seminar Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="16"
            value={187}
          >
            Thesis
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="17"
            value={310}
          >
            Video Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="18"
            value={183}
          >
            Working Paper
          </WithStyles(MenuItem)>
        </Field>
      </StandardCard>
    </WithStyles(Grid)>
    <React.Fragment>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <JournalArticleForm
          formValues={
            Immutable.Map {
              "rek_display_type": 179,
            }
          }
          submitting={false}
          subtypeVocabId={453573}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Upload files"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="files"
            requireOpenAccessStatus={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </StandardCard>
      </WithStyles(Grid)>
    </React.Fragment>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="secondary"
        disabled={false}
        fullWidth={true}
        onClick={[MockFunction]}
      >
        Abandon and search again
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        fullWidth={true}
        onClick={[MockFunction]}
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
        variant="contained"
      >
        Submit for approval
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`Component PublicationForm should render component with ResearchReportForm 1`] = `
<form
  onSubmit={[Function]}
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
      when={true}
    />
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Work type"
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Work type"
          name="rek_display_type"
          placeholder="Select a Work type from the dropdown list"
          required={true}
          value={275}
        >
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_0"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_1"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_2"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_3"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(Divider)
            key="div_0"
          />
          <WithStyles(MenuItem)
            disabled={false}
            key="0"
            value={263}
          >
            Audio Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="1"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="2"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="3"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="4"
            value={197}
          >
            Conference Proceedings
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="5"
            value={313}
          >
            Creative Work
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="6"
            value={181}
          >
            Department Technical Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="7"
            value={316}
          >
            Design
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="8"
            value={202}
          >
            Generic Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="9"
            value={238}
          >
            Image
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="10"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="11"
            value={191}
          >
            Newspaper Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="12"
            value={185}
          >
            Patent
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="13"
            value={204}
          >
            Preprint
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="14"
            value={275}
          >
            Research Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="15"
            value={189}
          >
            Seminar Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="16"
            value={187}
          >
            Thesis
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="17"
            value={310}
          >
            Video Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="18"
            value={183}
          >
            Working Paper
          </WithStyles(MenuItem)>
        </Field>
      </StandardCard>
    </WithStyles(Grid)>
    <React.Fragment>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <ResearchReportForm
          formValues={
            Immutable.Map {
              "rek_display_type": 275,
            }
          }
          submitting={false}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Upload files"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="files"
            requireOpenAccessStatus={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </StandardCard>
      </WithStyles(Grid)>
    </React.Fragment>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="secondary"
        disabled={false}
        fullWidth={true}
        onClick={[MockFunction]}
      >
        Abandon and search again
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        fullWidth={true}
        onClick={[MockFunction]}
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
        variant="contained"
      >
        Submit for approval
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`Component PublicationForm should render component with all fields disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
      when={true}
    />
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Work type"
      >
        <Field
          component={[Function]}
          disabled={true}
          label="Work type"
          name="rek_display_type"
          placeholder="Select a Work type from the dropdown list"
          required={true}
        >
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_0"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_1"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_2"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="fav_3"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(Divider)
            key="div_0"
          />
          <WithStyles(MenuItem)
            disabled={false}
            key="0"
            value={263}
          >
            Audio Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="1"
            value={174}
          >
            Book
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="2"
            value={177}
          >
            Book Chapter
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="3"
            value={130}
          >
            Conference Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="4"
            value={197}
          >
            Conference Proceedings
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="5"
            value={313}
          >
            Creative Work
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="6"
            value={181}
          >
            Department Technical Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="7"
            value={316}
          >
            Design
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="8"
            value={202}
          >
            Generic Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="9"
            value={238}
          >
            Image
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="10"
            value={179}
          >
            Journal Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="11"
            value={191}
          >
            Newspaper Article
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="12"
            value={185}
          >
            Patent
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="13"
            value={204}
          >
            Preprint
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="14"
            value={275}
          >
            Research Report
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="15"
            value={189}
          >
            Seminar Paper
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="16"
            value={187}
          >
            Thesis
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="17"
            value={310}
          >
            Video Document
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            disabled={false}
            key="18"
            value={183}
          >
            Working Paper
          </WithStyles(MenuItem)>
        </Field>
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Alert)
        message="Creating new work is in progress."
        pushToTop={true}
        showLoader={true}
        title="Saving"
        type="info_outline"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={12}
    >
      <WithStyles(Button)
        color="secondary"
        disabled={true}
        fullWidth={true}
        onClick={[MockFunction]}
      >
        Abandon and search again
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;
